--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<!-- saved from url=(0014)about:internet -->
 <html>
 <head>
 <title>GitHub Tracker</title>
+<link rel=stylesheet href="bootstrap.min.css">
+<link rel=stylesheet href="bootstrap-theme.min.css">
+<style>
+.panel-default { margin-bottom: 0px; }
+.well { margin-bottom: 0px; }
+body { margin: 10px; }
+.wait-cursor { cursor: wait; }
+blockquote { font-size: 1.0em; }
+</style>
 </head>
 <body>
   <div id="app"></div>
