Hide panel body when collapsing category.

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 <link rel=stylesheet href="bootstrap-theme.min.css">
 <style>
 .panel-default { margin-bottom: 0px; }
+.hide-body>.panel-body { display:none; }
 .well { margin-bottom: 0px; }
 body { margin: 10px; }
 .wait-cursor { cursor: wait; }
